update fix task & additional Debugging

--- a/Practice-2/Pham_Dinh_Phu/WordPress/playbook.yml
+++ b/Practice-2/Pham_Dinh_Phu/WordPress/playbook.yml
@@ -1,5 +1,7 @@
 ---   
 - hosts: node1    
+  gather_facts: False   
+  remote_user: root      
   become: true   
   vars_files:   
      - vars/default.yml   
