--- a/Practice-2/Pham_Dinh_Phu/WordPress/roles/mysql/tasks/main.yml
+++ b/Practice-2/Pham_Dinh_Phu/WordPress/roles/mysql/tasks/main.yml
@@ -2,18 +2,22 @@
 # MySQL Configuration   
 - name: Install MySQL Packages   
   apt: name={{ item }} update_cache=yes state=latest    
-  loop: [ 'mysql-server', 'php-mysqlnd', 'python3-PyMySQL' ]     
+  loop: [ 'mysql-server', 'php-mysqlnd', 'python3-pymysql' ]     
 
-- name: Start mysqld service   
-  service: name=mysqld state=started enabled=yes   
+- name: Ensure mysql is running and starts on boot      
+  service:   
+    name: mysql   
+    state: started    
+    enabled: yes     
+  become: yes       
 
 - name: Set MySQL root Password   
   mysql_user:    
-    login_host: 'localhost'   
+    login_host: 'localhost'    
+    password: "{{ mysql_root_password }}"   
+    check_implicit_admin: yes    
     login_user: 'root'   
-    login_password: ''   
-    name: 'root'   
-    password: '{{ mysql_root_password }}'    
+    login_password: '{{ mysql_root_password }}'    
     state: present    
 
 - name: Creates database for WordPress   
