--- a/Practice-2/Bui-Doan-Dang/flask-ansible/.service
+++ b/Practice-2/Bui-Doan-Dang/flask-ansible/.service
@@ -1,13 +1,13 @@
 [Unit]
-Description=Gunicorn instance to serve {{ app_name }}
+Description=Gunicorn instance to serve vm1
 After=network.target
 
 [Service]
-User={{ ansible_ssh_user }}
+User=vm1
 Group=www-data
-WorkingDirectory=/home/{{ ansible_ssh_user }}/{{ app_name }}
-Environment="PATH=/home/{{ ansible_ssh_user }}/{{ app_name }}/env/bin"
-ExecStart=/home/{{ ansible_ssh_user }}/{{ app_name }}/env/bin/gunicorn --workers 3 --bind unix:{{ app_name }}.sock -m 007 wsgi:app
+WorkingDirectory=/home/vm1/flask-ansible
+Environment="PATH=/home/vm1/flask-ansible/env/bin"
+ExecStart=/home/vm1/flask-ansible/env/bin/gunicorn --workers 3 --bind unix:flask-ansible.sock -m 007 wsgi:app
 
 [Install]
 WantedBy=multi-user.target
