--- a/Practice-2/Pham_Dinh_Phu/WordPress/roles/apache/tasks/main.yml
+++ b/Practice-2/Pham_Dinh_Phu/WordPress/roles/apache/tasks/main.yml
@@ -19,4 +19,17 @@
     dest: "/etc/apache2/sites-available/{{ http_conf }}"   
     owner: root   
     group: root  
-    mode: u=rw,g=r,o=r    
+    mode: u=rw,g=r,o=r     
+  
+- name: Enable rewrite module  
+  shell: /usr/sbin/a2enmod rewrite   
+  notify: Reload Apache   
+
+- name: Enable new site   
+  shell: /usr/sbin/a2ensite {{ http_conf }}   
+  notify: Reload Apache   
+
+- name: Disable default Apache site   
+  shell: /usr/sbin/a2dissite 000-default.conf   
+  notify: Restart Apache     
+  
