--- a/Practice-3/Phan Duc Anh/mongo/Dockerfile
+++ b/Practice-3/Phan Duc Anh/mongo/Dockerfile
@@ -4,5 +4,6 @@ ENV MONGO_INITDB_ROOT_USERNAME="admin"
 ENV MONGO_INITDB_ROOT_PASSWORD="Phananh272"
 ENV MONGO_INITDB_DATABASE="class"
 
-COPY ./db-init-1.js /docker-entrypoint-initdb.d/
-COPY ./db-init-2.js /docker-entrypoint-initdb.d/
+COPY ./db-init.js /docker-entrypoint-initdb.d/
+COPY ./datasource.csv /data/datasource.csv
+COPY docker-entrypoint.sh /usr/local/bin/
