--- a/Practice-3/Phan Duc Anh/docker-compose.yml
+++ b/Practice-3/Phan Duc Anh/docker-compose.yml
@@ -2,15 +2,14 @@ version: "3.9"
 services:
   web_mongo:
     build: ./mongo
-    container_name: web_mongo
   web_python:
     build: ./python
-    container_name: web_python
-    volumes:
-      - ./python:/app
+    depends_on:
+      - "web_mongo"
   web_nginx:
     build: ./nginx
-    container_name: web_nginx
+    depends_on:
+      - "web_python"
     volumes:
       - ./nginx:/usr/share/nginx/html
     ports:
