--- a/Practice-3/Vo-Minh-Thien-Long/backend/Dockerfile
+++ b/Practice-3/Vo-Minh-Thien-Long/backend/Dockerfile
@@ -1,5 +1,6 @@
 FROM python:3.9
 WORKDIR /usr/src/app/
 COPY . .
+RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
-CMD ["python", "./app.py"]
+CMD ["python3", "-m", "flask", "run", "--host=0.0.0.0"]
