--- a/Practice-3/Pham_Dinh_Phu/app/Dockerfile
+++ b/Practice-3/Pham_Dinh_Phu/app/Dockerfile
@@ -9,5 +9,5 @@ RUN pip install gunicorn
 
 EXPOSE 5000   
 
-CMD ["gunicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi"]   
+CMD [ "guinicorn", "-w", "4", "--bind", "0.0.0.0:5000", "wsgi" ]   
 
