--- a/Practice-3/Pham_Dinh_Phu/docker-compose.yml
+++ b/Practice-3/Pham_Dinh_Phu/docker-compose.yml
@@ -1,72 +1,23 @@
 version: '3'
 services:
-
-  flask:
-    build:
-      context: app
-      dockerfile: Dockerfile
-    container_name: flask
-    image: python:3.9
-    restart: unless-stopped
-    environment:
-      APP_ENV: "prod"
-      APP_DEBUG: "False"
-      APP_PORT: 5000
-    volumes:
-      - appdata:/var/www
-    depends_on:
-      - mongodb
-    networks:
-      - frontend
-      - backend
-
-  mongodb:
-    image: mongo:5.0.0 
-    container_name: mongodb
-    restart: unless-stopped
-    hostname: test_mongodb
-    environment:
-      - MONGO_INITDB_DATABASE=flaskdb
-      - MONGO_INITDB_ROOT_USERNAME=root
-      - MONGO_INITDB_ROOT_PASSWORD=pass
-    volumes:
-      - ./init-db.js:/docker-entrypoint-initdb.d/init-db.js:ro  
-    ports:  
-      - 27017:27017   
-    networks:
-      - backend
-
-  webserver:
-    build:
-      context: nginx
-      dockerfile: Dockerfile
-    image: nginx:1.22.0-alpine
-    container_name: webserver
-    restart: unless-stopped
-    environment:
-      APP_ENV: "prod"
-      APP_NAME: "webserver"
-      APP_DEBUG: "true"
-      SERVICE_NAME: "webserver"
-    ports:
-      - "80:80"
-      - "443:443"
-    volumes:
-      - nginxdata:/var/log/nginx
-    depends_on:
-      - flask
-    networks:
-      - frontend
-
-networks:
-  frontend:
-    driver: bridge
-  backend:
-    driver: bridge
-
-volumes:
-  appdata:
-    driver: local
-  nginxdata:
-    driver: local  
-
+   web: 
+      image: nginx:1.22.0-alpine    
+      volumes:   
+         - ./nginx/nginx.conf:/tmp/nginx.conf    
+      environment:  
+         - FLASK_SERVER_ADDR=backend:9091   
+      command: /bin/bash -c "envsubst < /tmp/nginx.conf > /etc/nginx/conf.d/default.conf && nginx -g 'daemon off;'"
+      ports:  
+         - 80:80  
+      depends_on:  
+         - backend  
+   backend:   
+       build: flask   
+       environment:   
+         - FLASK_SERVER_PORT=9091    
+       volumes:   
+         - ./flask:/src   
+       depends_on:   
+         - mongo   
+   mongo:   
+       image: mongo:5.0.0     
