--- a/Practice-3/Pham_Dinh_Phu/flask/Dockerfile
+++ b/Practice-3/Pham_Dinh_Phu/flask/Dockerfile
@@ -1,8 +1,8 @@
 FROM python:3.9     
     
-WORKDIR /var/www   
+WORKDIR /src  
 
-COPY . /var/www  
+COPY . . 
 
 RUN pip install --no-cache-dir -r requirements.txt       
 
