--- a/Practice-4/Tran-Quang-Hai/ansible/playbooks/roles/ha/tasks/allow-port.yml
+++ b/Practice-4/Tran-Quang-Hai/ansible/playbooks/roles/ha/tasks/allow-port.yml
@@ -1,3 +1,6 @@
 - name: Allow Port 80
   become: true
-  shell: ufw allow 80 | ufw enable | ufw reload
+  shell: |
+    ufw allow 80 
+    ufw enable 
+    ufw reload
