add ha alertmanager

--- a/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/playbook.yml
+++ b/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/playbook.yml
@@ -2,8 +2,8 @@
   hosts: all
   become: yes
   roles:
-#  - docker
-#  - node_exporter
+  - docker
+  - node_exporter
   - prometheus
 
 - name: Install Alertmanager-HA-1
