--- a/Practice-4/vu-thi-huyen/roles/alertmanager/tasks/main.yml
+++ b/Practice-4/vu-thi-huyen/roles/alertmanager/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: Copy AlertManager Config file
+  copy:
+    src: config.yml
+    dest: ~/alertmanager/
+
 - name: Create alertmanager container
   docker_container:
     image: prom/alertmanager:v0.22.2
