--- a/Practice-5/Phan Duc Anh/fluentd/fluent.conf
+++ b/Practice-5/Phan Duc Anh/fluentd/fluent.conf
@@ -8,7 +8,7 @@
   @type copy
   <store>
     @type elasticsearch
-    host tuandat82.vddns.vn
+    host 27.71.229.80
     port 9200
     logstash_format true
     logstash_prefix PhanDucAnh_WebApp
