--- a/Practice-4/vu-thi-huyen/roles/node-exporter/tasks/main.yml
+++ b/Practice-4/vu-thi-huyen/roles/node-exporter/tasks/main.yml
@@ -14,4 +14,4 @@
       - "^/(sys|proc|dev|host|etc|rootfs/var/lib/docker/containers|rootfs/var/lib/docker/overlay2|rootfs/run/docker/netns|rootfs/var/lib/docker/aufs)($$|/)"
     ports:
      - 9100:9100
-    # restart: always
+    # restart: yes
