--- a/Practice-4/vu-thi-huyen/roles/prometheus/tasks/main.yml
+++ b/Practice-4/vu-thi-huyen/roles/prometheus/tasks/main.yml
@@ -16,7 +16,7 @@
     volumes:
       - ./prometheus:/etc/prometheus
       - prometheus-db:/prometheus
-      - ./prometheus/alert.rules.yml:/alertmanager/alert.rules.yml
+      - ./prometheus/alert.rules:/alertmanager/alert.rules.yml
     command:
       - '--config.file=/etc/prometheus/prometheus.yml'
       - '--storage.tsdb.path=/prometheus'
