--- a/Practice-4/vu-thi-huyen/roles/alertmanager/tasks/main.yml
+++ b/Practice-4/vu-thi-huyen/roles/alertmanager/tasks/main.yml
@@ -9,10 +9,10 @@
     image: prom/alertmanager:v0.22.2
     name: alertmanager
     volumes:
-      - ./alertmanager:/etc/alertmanager
+      - ~/alertmanager:/etc/alertmanager
     command:
       - '--config.file=/etc/alertmanager/config.yml'
       - '--storage.path=/alertmanager'
     ports:
     - 9093:9093
-    # restart: unless-stopped
+    restart_policy: unless-stopped
