--- a/Practice-4/vu-thi-huyen/roles/alertmanager/files/config.yml
+++ b/Practice-4/vu-thi-huyen/roles/alertmanager/files/config.yml
@@ -7,7 +7,9 @@ receivers:
   - name: 'telegram'
     telegram_configs:
       - send_resolved: true
+        # url: http://192.168.18.109:9093
         api_url: https://api.telegram.org
-        chat_id: -622739777
+        # chat_id: -622739777
+        chat_id: -723072834
         bot_token: '5517574482:AAGkzQRxHfd9b42jShLSEPcFRyFErGVVL7I'
         parse_mode: 'HTML'
