--- a/Practice-4/vu-thi-huyen/roles/grafana/provisioning/dashboards/dashboard.yml
+++ b/Practice-4/vu-thi-huyen/roles/grafana/provisioning/dashboards/dashboard.yml
@@ -3,7 +3,7 @@ apiVersion: 1
 providers:
 - name: 'Prometheus'
   orgId: 1
-  folder: ''
+  folder: 'folder_name'
   type: file
   disableDeletion: false
   editable: true
