edit alertmanager config Telepush

--- a/Practice-4/vu-thi-huyen/stop.yml
+++ b/Practice-4/vu-thi-huyen/stop.yml
@@ -1,6 +1,6 @@
 ---
 - name: stop all container
-  hosts: node-exporters
+  hosts: monitors
 
   tasks:
     - name: Get info on docker host and list images
