--- a/Practice-4/vu-thi-huyen/roles/prometheus/files/alert.rules.yml
+++ b/Practice-4/vu-thi-huyen/roles/prometheus/files/alert.rules.yml
@@ -69,13 +69,13 @@ groups:
       summary: Container Memory usage (instance {{ $labels.instance }})
       description: "Container Memory usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
 
-  - alert: ContainerVolumeUsage
-    expr: (1 - (sum(container_fs_inodes_free{name!=""}) BY (instance) / sum(container_fs_inodes_total) BY (instance))) * 100 > 80
-    for: 2m
-    labels:
-      severity: warning
-    annotations:
-      summary: Container Volume usage (instance {{ $labels.instance }})
-      description: "Container Volume usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
+  # - alert: ContainerVolumeUsage
+  #   expr: (1 - (sum(container_fs_inodes_free{name!=""}) BY (instance) / sum(container_fs_inodes_total) BY (instance))) * 100 > 80
+  #   for: 2m
+  #   labels:
+  #     severity: warning
+  #   annotations:
+  #     summary: Container Volume usage (instance {{ $labels.instance }})
+  #     description: "Container Volume usage is above 80%\n  VALUE = {{ $value }}\n  LABELS = {{ $labels }}"
 
 
