--- a/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/roles/alertmanager1/tasks/main.yml
+++ b/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/roles/alertmanager1/tasks/main.yml
@@ -17,6 +17,6 @@
     command:
     - '--config.file=/etc/config.yml'
     - '--storage.path=/alertmanager'
-    - '--cluster-peer=34.227.159.188:9093'
+    - '--cluster.peer=34.227.159.188:9093'
     ports:
     - "9093:9093"
