--- a/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/roles/alertmanager2/tasks/main.yml
+++ b/Practice-4/Vo-Minh-Thien-Long/practice-4-ha-alertmanager/roles/alertmanager2/tasks/main.yml
@@ -17,6 +17,6 @@
     command:
     - '--config.file=/etc/config.yml'
     - '--storage.path=/alertmanager'
-    - '--cluster-peer=35.173.247.2:9093'
+    - '--cluster.peer=35.173.247.2:9093'
     ports:
     - "9093:9093"
